{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 68,
  "lineage": "81ed327a-ac50-aa88-3f3d-f6ba42b2116e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:internet-gateway/igw-0c2ff4f5ac5f96a51",
            "id": "igw-0c2ff4f5ac5f96a51",
            "owner_id": "101463943313",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:vpc/vpc-0b695f722847cf1e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09f04049588b5d55e",
            "default_route_table_id": "rtb-0ffe3477325559d69",
            "default_security_group_id": "sg-0f2e535fd960cbbf5",
            "dhcp_options_id": "dopt-083bf15c50e4ac32b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b695f722847cf1e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffe3477325559d69",
            "owner_id": "101463943313"
          }
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e33bdecce7b4cf93",
            "association_id": "eipassoc-0152abe8e09a2880c",
            "domain": "vpc",
            "id": "eipalloc-0e33bdecce7b4cf93",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f5fc66324cb3c7a9",
            "private_dns": "ip-172-16-1-24.ec2.internal",
            "private_ip": "172.16.1.24",
            "public_dns": "ec2-18-210-200-237.compute-1.amazonaws.com",
            "public_ip": "18.210.200.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_subnet_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e33bdecce7b4cf93",
            "association_id": "eipassoc-0152abe8e09a2880c",
            "connectivity_type": "public",
            "id": "nat-009b60fa58eaf1545",
            "network_interface_id": "eni-0f5fc66324cb3c7a9",
            "private_ip": "172.16.1.24",
            "public_ip": "18.210.200.237",
            "subnet_id": "subnet-05b869c0db2fa7079"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1a-network.aws_eip.public_eip",
            "module.us-east-1a-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-065856db6484634ae",
            "id": "rtb-065856db6484634ae",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009b60fa58eaf1545",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1a-network.aws_nat_gateway.public_subnet_nat"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-0bcecadc9b1000004",
            "id": "rtb-0bcecadc9b1000004",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ff4f5ac5f96a51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0332ffad21ecac198",
            "route_table_id": "rtb-065856db6484634ae",
            "subnet_id": "subnet-0dd0e7b67b367b640"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1a-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1a-network.aws_route_table.private_route_table",
            "module.us-east-1a-network.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0006f6809bab8cfdf",
            "route_table_id": "rtb-065856db6484634ae",
            "subnet_id": "subnet-06fac96658750800a"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1a-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1a-network.aws_route_table.private_route_table",
            "module.us-east-1a-network.aws_subnet.private_db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000f7b47daf0be70f",
            "route_table_id": "rtb-0bcecadc9b1000004",
            "subnet_id": "subnet-05b869c0db2fa7079"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc",
            "module.us-east-1a-network.aws_route_table.public_route_table",
            "module.us-east-1a-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-0dd0e7b67b367b640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0e7b67b367b640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-06fac96658750800a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fac96658750800a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1a-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-05b869c0db2fa7079",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b869c0db2fa7079",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004374fbf17d55c62",
            "association_id": "eipassoc-0fe54ae174796e42b",
            "domain": "vpc",
            "id": "eipalloc-004374fbf17d55c62",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08a0b9de335a69093",
            "private_dns": "ip-172-16-2-183.ec2.internal",
            "private_ip": "172.16.2.183",
            "public_dns": "ec2-52-71-171-95.compute-1.amazonaws.com",
            "public_ip": "52.71.171.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_subnet_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004374fbf17d55c62",
            "association_id": "eipassoc-0fe54ae174796e42b",
            "connectivity_type": "public",
            "id": "nat-0972d180124cf0e89",
            "network_interface_id": "eni-08a0b9de335a69093",
            "private_ip": "172.16.2.183",
            "public_ip": "52.71.171.95",
            "subnet_id": "subnet-082414bda36506251"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1b-network.aws_eip.public_eip",
            "module.us-east-1b-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-0d9d275f2a2af9982",
            "id": "rtb-0d9d275f2a2af9982",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0972d180124cf0e89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1b-network.aws_nat_gateway.public_subnet_nat"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-01f9540b711b5e9f3",
            "id": "rtb-01f9540b711b5e9f3",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ff4f5ac5f96a51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08711949f4e99bada",
            "route_table_id": "rtb-0d9d275f2a2af9982",
            "subnet_id": "subnet-0ef2faa980428044e"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1b-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1b-network.aws_route_table.private_route_table",
            "module.us-east-1b-network.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f18d4b11edeb779f",
            "route_table_id": "rtb-0d9d275f2a2af9982",
            "subnet_id": "subnet-0195e53989ffddfdc"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1b-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1b-network.aws_route_table.private_route_table",
            "module.us-east-1b-network.aws_subnet.private_db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b6186f4fb88fcbd",
            "route_table_id": "rtb-01f9540b711b5e9f3",
            "subnet_id": "subnet-082414bda36506251"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc",
            "module.us-east-1b-network.aws_route_table.public_route_table",
            "module.us-east-1b-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-0ef2faa980428044e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef2faa980428044e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-0195e53989ffddfdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0195e53989ffddfdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1b-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-082414bda36506251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082414bda36506251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b351bd4d8139364e",
            "association_id": "eipassoc-04126c401a26b134b",
            "domain": "vpc",
            "id": "eipalloc-0b351bd4d8139364e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-026b3bf1e791ae990",
            "private_dns": "ip-172-16-3-57.ec2.internal",
            "private_ip": "172.16.3.57",
            "public_dns": "ec2-34-227-167-8.compute-1.amazonaws.com",
            "public_ip": "34.227.167.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_subnet_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b351bd4d8139364e",
            "association_id": "eipassoc-04126c401a26b134b",
            "connectivity_type": "public",
            "id": "nat-0ea81d3fbd4ef6806",
            "network_interface_id": "eni-026b3bf1e791ae990",
            "private_ip": "172.16.3.57",
            "public_ip": "34.227.167.8",
            "subnet_id": "subnet-056460967874d5676"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1c-network.aws_eip.public_eip",
            "module.us-east-1c-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-06f88b54d25688937",
            "id": "rtb-06f88b54d25688937",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ea81d3fbd4ef6806",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1c-network.aws_nat_gateway.public_subnet_nat"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:route-table/rtb-09ca9f60bda8741ff",
            "id": "rtb-09ca9f60bda8741ff",
            "owner_id": "101463943313",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ff4f5ac5f96a51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e090a25c70b77c28",
            "route_table_id": "rtb-06f88b54d25688937",
            "subnet_id": "subnet-065e64a60d3fea756"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1c-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1c-network.aws_route_table.private_route_table",
            "module.us-east-1c-network.aws_subnet.private_app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_route_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015d0fddf054bb01d",
            "route_table_id": "rtb-06f88b54d25688937",
            "subnet_id": "subnet-09d8d397e06dd982d"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.us-east-1c-network.aws_nat_gateway.public_subnet_nat",
            "module.us-east-1c-network.aws_route_table.private_route_table",
            "module.us-east-1c-network.aws_subnet.private_db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b15e48e0e0bcf07",
            "route_table_id": "rtb-09ca9f60bda8741ff",
            "subnet_id": "subnet-056460967874d5676"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc",
            "module.us-east-1c-network.aws_route_table.public_route_table",
            "module.us-east-1c-network.aws_subnet.public_bastion_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-065e64a60d3fea756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065e64a60d3fea756",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-09d8d397e06dd982d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8d397e06dd982d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.us-east-1c-network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101463943313:subnet/subnet-056460967874d5676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056460967874d5676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101463943313",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b695f722847cf1e3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}